force-app/main/default/objects/nFORCE__Screen_Section__c/nFORCE__Screen_Section__c.object-meta.xml
<CustomObject>
    <label>Screen Section</label>
    <nameField>
        <label>Screen Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screen Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>