force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Break_Page_After__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Break_Page_After__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is used by Credit Memo framework. The default value is false. When the value is set to true, the credit memo export PDF breaks after this section. This field is accessible to the user from credit memo view and the value is updated when user clicks on Insert Page Break or Remove Page Break.</description>
    <inlineHelpText>Forces a page break after the section when printing.</inlineHelpText>
    <label>Break Page After</label>
    <type>Checkbox</type>
</CustomField>