force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Break_Page_Before__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Break_Page_Before__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is used by Credit Memo framework. The default value is false. When the value is set to true, the credit memo export PDF breaks before the section. This field is not accessible to the user and can be set by an administrator to set required page breaks.</description>
    <inlineHelpText>Forces a page break before the section when printing.</inlineHelpText>
    <label>Break Page Before</label>
    <type>Checkbox</type>
</CustomField>