force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Default_Editable__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Default_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is used by UI framework. The default value is false. When this value is set to true, the section displays as editable by default.</description>
    <label>Default Editable</label>
    <type>Checkbox</type>
</CustomField>