force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Default_Rendered__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Default_Rendered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is used by Credit Memo framework. The default value is false. When this value is set to true, the section is rendered by default. When this value is set to false, the section is show as minimized with header only and the user must click on View More link to render the entire section.</description>
    <label>Default Rendered</label>
    <type>Checkbox</type>
</CustomField>