force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Disable_Read_Only_View__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Disable_Read_Only_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Currently, this field doesn’t support any logic. When true, this field will hide the cancel button on the screen section where it is configured and will not display to the user in the nCino UI. By default, this is false.</description>
    <label>Disable Read-Only View</label>
    <type>Checkbox</type>
</CustomField>