force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Display_Input_Address_Component__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Display_Input_Address_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this field will display the input address component to autocomplete addresses.</description>
    <inlineHelpText>Select this box to use autocomplete address component.</inlineHelpText>
    <label>Display Input Address Component</label>
    <type>Checkbox</type>
</CustomField>