force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Display_Toggle_Link__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Display_Toggle_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is used by Credit Memo framework. The default value is false. When selected, it allows the show/hide link to appear to the right, and once clicked, it expands the section.</description>
    <label>Display Toggle Link</label>
    <type>Checkbox</type>
</CustomField>