force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Inactive__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is used by Credit Memo framework. The default value is false. When the value is set to true, the section is condired inactive. On a credit memo view or PDF, inactive sections will not be displayed. On credit memo templates, inactive sections will not be cloned when that template is selected from Credit Memo selection page.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>