force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Instructions_Text__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Instructions_Text__c</fullName>
    <description>This field is optional and is used by Credit Memo framework. The default value is empty. The administrator may use this field to display instructions on credit memo view. These instructions will not be included in PDF export.</description>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>