force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Layout__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Layout__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is currently not being used.</description>
    <label>Layout</label>
    <referenceTo>nFORCE__Layout__c</referenceTo>
    <relationshipLabel>Screen Sections</relationshipLabel>
    <relationshipName>Screen_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>