force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Number_of_Columns__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Number_of_Columns__c</fullName>
    <description>This field is manually set. If the screen section is displaying a table, this field will specify the number of columns that will be displayed in the table.</description>
    <inlineHelpText>If the screen section is displaying a table, this is the number of columns that will be displayed in the table.</inlineHelpText>
    <label>Number of Columns</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>