force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Parent_Screen_Section__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parent_Screen_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is manually populated. It is optional. This field is used for conditional field rendering. It specifies the screen section a conditional screen section is associated to.</description>
    <label>Parent Screen Section</label>
    <referenceTo>nFORCE__Screen_Section__c</referenceTo>
    <relationshipLabel>Screen Sections</relationshipLabel>
    <relationshipName>Screen_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>