force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Screen__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Screen__c</fullName>
    <description>This field is optional. It is automatically populated whenever a screen section is created from the screen. This field specifies the screen associated with the screen section.</description>
    <label>Screen</label>
    <referenceTo>nFORCE__Screen__c</referenceTo>
    <relationshipLabel>Screen Sections</relationshipLabel>
    <relationshipName>Screen_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>