force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Screen_View__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Screen_View__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is optional. It is automatically populated by the Layout Builder tool on the screen section. This field specifies the screen view associated with the screen section. This field is typically used with the credit memo. It provides the credit memo with the code used to generate the fields and their layout.</description>
    <label>Screen View</label>
    <referenceTo>nFORCE__View__c</referenceTo>
    <relationshipLabel>Screen Sections</relationshipLabel>
    <relationshipName>Screen_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>