force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nFORCE__Validation_Service__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Validation_Service__c</fullName>
    <description>The system automatically populates this optional text field to provide the name of a cross-package validation service for custom validation on a screen section. By default, it is null.</description>
    <label>Validation Service</label>
    <length>80</length>
    <type>Text</type>
</CustomField>