force-app/main/default/objects/nFORCE__Screen_Section__c/fields/nPortal__Portal_Subheader_Text__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Portal_Subheader_Text__c</fullName>
    <description>An optional subheader field which will display supplementary text with the header.</description>
    <inlineHelpText>This optional value provides supplementary text to go with the Portal Header Text field.</inlineHelpText>
    <label>Portal Subheader Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>