force-app/main/default/objects/nFORCE__Screen_Section__c/validationRules/nFORCE__Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>nFORCE__Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(nFORCE__Section_Resource__c) )</errorConditionFormula>
    <errorDisplayField>nFORCE__Section_Resource__c</errorDisplayField>
    <errorMessage>Please select a section resource.</errorMessage>
</ValidationRule>